unpackaged/main/default/objects/Customer_Objective__c/Customer_Objective__c.object-meta.xml
<CustomObject>
    <label>Customer Objective</label>
    <nameField>
        <displayFormat>CO-{00000}</displayFormat>
        <label>Customer Objective Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Objectives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>