unpackaged/main/default/objects/Customer_Objective__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Field is only filled if Type = Account Customer Objective</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Customer Objectives</relationshipLabel>
    <relationshipName>Account_Customer_Objectives</relationshipName>
    <type>Lookup</type>
</CustomField>