unpackaged/main/default/objects/Customer_Objective__c/fields/Already_existing_Customer_Objective__c.field-meta.xml
<CustomField>
    <fullName>Already_existing_Customer_Objective__c</fullName>
    <defaultValue>false</defaultValue>
    <description>will only be filled by FLOW_CustomerObjective_BeforeTrigger to prevent saving in Case of a duplicate Objective</description>
    <label>Already existing Customer Objective</label>
    <type>Checkbox</type>
</CustomField>