unpackaged/main/default/objects/Customer_Objective__c/fields/Marked_as_primary__c.field-meta.xml
<CustomField>
    <fullName>Marked_as_primary__c</fullName>
    <label>Marked as primary</label>
    <type>DateTime</type>
</CustomField>