unpackaged/main/default/objects/Customer_Objective__c/fields/Objective_Dates__c.field-meta.xml
<CustomField>
    <fullName>Objective_Dates__c</fullName>
    <formula>IF(Primary__c = true, &quot;Marked as primary: &quot; + TEXT(DATEVALUE(Marked_as_primary__c)) + BR(), &quot;not marked as primary&quot; + BR())
+
IF( ( CASESAFEID(RecordTypeId ) =  $Setup.CustomerObjectivesRecordTypes__c.Account_Customer_Objective__c &amp;&amp; Primary__c = true), &quot;Success Check On: &quot; + TEXT(Success_Check_On__c) + BR(), &quot;not Success Check relevant&quot; + BR())
+
IF(ISPICKVAL(Status__c, &quot;Completed&quot;), &quot;Completed On: &quot; + TEXT( DATEVALUE(Completed_On__c) ), &quot;not yet completed&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Objective Dates</label>
    <type>Text</type>
</CustomField>