unpackaged/main/default/objects/Customer_Objective__c/fields/Shop__c.field-meta.xml
<CustomField>
    <fullName>Shop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field is only Filled if Type = Shop Customer Objective</description>
    <label>Shop</label>
    <referenceTo>shop__c</referenceTo>
    <relationshipLabel>Shop Customer Objectives</relationshipLabel>
    <relationshipName>Shop_Customer_Objectives</relationshipName>
    <type>Lookup</type>
</CustomField>