unpackaged/main/default/objects/Customer_Objective__c/fields/Shop_Company__c.field-meta.xml
<CustomField>
    <fullName>Shop_Company__c</fullName>
    <description>Helper Field for Screenflow to find Shop Customer Objectives related to the same Account as an Account Customer Objective</description>
    <formula>Shop__r.company_id__r.Casesafe_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shop Company</label>
    <type>Text</type>
</CustomField>