unpackaged/main/default/objects/Customer_Objective__c/fields/Success_Check_creation_due__c.field-meta.xml
<CustomField>
    <fullName>Success_Check_creation_due__c</fullName>
    <formula>IF( Success_Check_On__c =TODAY(), true, false )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Success Check creation due?</label>
    <type>Checkbox</type>
</CustomField>