unpackaged/main/default/objects/Customer_Objective__c/fields/Success_Check_On__c.field-meta.xml
<CustomField>
    <fullName>Success_Check_On__c</fullName>
    <label>Success Check On</label>
    <type>Date</type>
</CustomField>