unpackaged/main/default/objects/Customer_Objective__c/recordTypes/Account_Customer_Objective.recordType-meta.xml
<RecordType>
    <fullName>Account_Customer_Objective</fullName>
    <active>true</active>
    <label>Account Customer Objective</label>
</RecordType>