unpackaged/main/default/objects/Customer_Objective__c/recordTypes/Shop_Customer_Objective.recordType-meta.xml
<RecordType>
    <fullName>Shop_Customer_Objective</fullName>
    <active>true</active>
    <label>Shop Customer Objective</label>
</RecordType>