unpackaged/main/default/objects/Customer_Objective__c/validationRules/Objective_change_not_allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Objective_change_not_allowed</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Objective__c)</errorConditionFormula>
    <errorDisplayField>Objective__c</errorDisplayField>
    <errorMessage>Error! Please do not change the Objective, but create a new one instead. Thanks!</errorMessage>
</ValidationRule>