unpackaged/main/default/objects/Customer_Objective__c/validationRules/Objective_needs_related_account.validationRule-meta.xml
<ValidationRule>
    <fullName>Objective_needs_related_account</fullName>
    <active>true</active>
    <errorConditionFormula>(ISNEW()
||
ISCHANGED(Account__c)
||
ISCHANGED(Shop__c)
)
&amp;&amp;
 RecordType.DeveloperName = &#39;Account_Customer_Objective&#39;
&amp;&amp;
(
 ISBLANK(Account__c)
 || 
 NOT(ISBLANK(Shop__c))
)</errorConditionFormula>
    <errorMessage>Error! This Customer Objective needs a related Account and should not be related to the shop. Please make sure to only fill in the Account Lookup Field. Thanks!</errorMessage>
</ValidationRule>