unpackaged/main/default/objects/Customer_Objective__c/validationRules/Objective_needs_related_shop.validationRule-meta.xml
<ValidationRule>
    <fullName>Objective_needs_related_shop</fullName>
    <active>true</active>
    <errorConditionFormula>(ISNEW()
||
ISCHANGED(Account__c)
||
ISCHANGED(Shop__c)
)
&amp;&amp;
 RecordType.DeveloperName = &#39;Shop_Customer_Objective&#39;
&amp;&amp;
(
ISBLANK(Shop__c)
 ||  
 NOT(ISBLANK(Account__c))
)</errorConditionFormula>
    <errorMessage>Error! This Customer Objective needs a related shop and should not be related to the account. Please make sure to only fill in the Shop Lookup Field. Thanks!</errorMessage>
</ValidationRule>