unpackaged/main/default/objects/Customer_Objective__c/validationRules/Success_Checks_only_on_Primary_Objective.validationRule-meta.xml
<ValidationRule>
    <fullName>Success_Checks_only_on_Primary_Objective</fullName>
    <active>true</active>
    <errorConditionFormula>(ISNEW()
||
ISCHANGED( Success_Check_On__c ))
&amp;&amp;
NOT(ISBLANK(Success_Check_On__c))
&amp;&amp;
 Primary__c = false</errorConditionFormula>
    <errorMessage>Error! Success Checks are only allowed for Primary Customer Objectives. Thanks!</errorMessage>
</ValidationRule>