unpackaged/main/default/objects/Customer_Objective__c/listViews/All_Customer_Objectives.listView-meta.xml
<ListView>
    <fullName>All_Customer_Objectives</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Objective__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Status__c</columns>
    <columns>Marked_as_primary__c</columns>
    <columns>Validated__c</columns>
    <columns>Success_Check_On__c</columns>
    <columns>Shop__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Customer Objectives</label>
    <sharedTo>
        <role>System_Administrators</role>
    </sharedTo>
</ListView>